# Ndvi2Gif

./: .gitignore  CHANGELOG.md  MANIFEST.in  NDVI_Multi_Temp_Landsat.ipynb  NDVI_Temporal_Geemap.ipynb  README.html  README.md  README.rst  ndvi2gif.ipynb  ndvi2gif.py  ndvi2gif_notebook_example.ipynb  ndvi_seasonality.ipynb  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
.ipynb_checkpoints/: ndvi2gif_notebook_example-checkpoint.ipynb
ndvi2gif/: __init__.py  ndvi2gif extended version.ipynb  ndvi2gif.py  ndvi2gif_notebook_example.ipynb
recipe/: meta.yaml
tests/: test_basic.py
