[metadata]
name = ndvi2gif
version = 0.2.0
description = Generate seasonal composites and extract statistical summaries from any remote sensing index using Google Earth Engine and geemap
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego García Díaz
author_email = diegogarcia@ebd.csic.es
url = https://github.com/Digdgeo/Ndvi2Gif
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
python_requires = >=3.8
install_requires =
    geemap>=0.29.5
    earthengine-api>=0.1.347
    numpy<2.0
    matplotlib
    pillow
    imageio
    tqdm
    requests
    geopandas
    fiona

[options.extras_require]
deims =
    deims>=4.0
